tests/wpt/tests/third_party/test262/test/language/expressions/async-generator/early-errors-expression-not-simple-assignment-target.js
// Copyright 2017 the V8 project authors. All rights reserved.
// This code is governed by the BSD license found in the LICENSE file.

/*---
author: Caitlin Potter <caitp@igalia.com>
esid: prod-LeftHandSideExpression
description: >
  Async generator function expressions are not a simple assignment target.
negative:
  phase: parse
  type: SyntaxError
features: [async-iteration]
---*/

$DONOTEVALUATE();

(async function*() { } = 1);
